--- a/TranspoLink/Views/Home/AboutUs.cshtml
+++ b/TranspoLink/Views/Home/AboutUs.cshtml
@@ -47,7 +47,7 @@
             </p>
 
             <div class="map-wrapper">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.793746671049!2d101.6841283749712!3d3.149029996826388!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc37004f26c361%3A0x6d9a0d8e8e7e7e0!2sKuala%20Lumpur%2C%20Federal%20Territory%20of%20Kuala%20Lumpur!5e0!3m2!1sen!2smy!4v1700000000000!5m2!1sen!2smy"
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.537791254655!2d101.72400363130777!3d3.2152605527454696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc3843bfb6a031%3A0x2dc5e067aae3ab84!2sTunku%20Abdul%20Rahman%20University%20of%20Management%20and%20Technology%20(TAR%20UMT)!5e0!3m2!1sen!2smy!4v1765106603306!5m2!1sen!2smy"
                         width="100%"
                         height="100%"
                         style="border:0;"
