--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -127,6 +127,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/#features">Features</a></li>
                 <li><a href="/#trending">News & Offers</a></li>
+                <li><a href="/#contact">Contact</a></li>
                 <li><a href="/Home/AboutUs">About Us</a></li>
             }
             else
