--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -112,9 +112,9 @@
                         Operations <span style="font-size:10px;">▼</span>
                     </a>
                     <div class="nav-dropdown-content" id="navOpsContent">
-                        <a href="/Admin/Routes">🗺️ Routes</a>
+                        <a href="/RouteNTrip/Routes">🗺️ Routes</a>
                         <a href="/Vehicle/Vehicles">🚌 Vehicles</a>
-                        <a href="/Admin/Trips">🎫 Trips</a>
+                        <a href="/RouteNTrip/Trips">🎫 Trips</a>
                         <a href="/Admin/Bookings">📋 Bookings</a>
                     </div>
                 </li>
